<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10">

    <ImageView
        android:layout_weight="4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logo01"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="Please login to start using the app"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Login" />
    <TextView
        android:id="@+id/toSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="You’re new? Sign up here!"
        android:textSize="16sp" />


</LinearLayout>