<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/logo01"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="Create your account"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
         />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Username"
        android:textSize="16sp"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="Password"
        android:textSize="16sp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Sign Up"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="Have an account? Try logging in!"
        android:textSize="16sp"
/>


</LinearLayout>