...

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email?"/>
                <TextView
                    android:id="@+id/emailStyle"
                    android:layout_width="match_parent"
...
