...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TEST DOGS ARE NOT FOODS"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
...
